--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1"
+    "react-icons": "^4.10.1",
+    "zustand": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "20.5.7",
