--- a/package.json
+++ b/package.json
@@ -9,13 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.2.0",
+    "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "swr": "^2.2.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -23,6 +31,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "postcss": "^8.4.28",
+    "prisma": "^5.2.0",
     "tailwindcss": "^3.3.3",
     "typescript": "5.2.2"
   }
