--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@prisma/client": "^5.2.0",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
-    "next": "13.4.19",
+    "date-fns": "^2.30.0",
+    "next": "13.2.4",
     "next-auth": "^4.23.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "react-spinners": "^0.13.8",
     "swr": "^2.2.2",
     "zustand": "^4.4.1"
   },
@@ -27,6 +29,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@types/react-spinner": "^0.2.0",
     "autoprefixer": "^10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
